add target=_blank in about.html

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,24 +17,26 @@
                     <h2 class="article__caption">О проекте</h2>
                     <div class="article__text">
                         <p>
-                            Автор работы - <a href="https://www.linkedin.com/in/vadym-haimanovskyi">Вадим
-                                Гаймановский</a>.
+                            Автор работы - <a href="https://www.linkedin.com/in/vadym-haimanovskyi"
+                                target="_blank">Вадим Гаймановский</a>.
                         </p>
                         <p>
                             Данный проект реализован в образовательных целях. Это выпускная работа в рамках курса
-                            Front-End Development <a href="https://beetroot.academy">Beetroot Accademy</a>.
+                            Front-End Development <a href="https://beetroot.academy" target="_blank">Beetroot
+                                Accademy</a>.
                         </p>
                         <p>
                             Вдохновением для проекта стала серия игр <a
-                                href="https://en.wikipedia.org/wiki/Space_Rangers_2:_Dominators">Космиеские
+                                href="https://en.wikipedia.org/wiki/Space_Rangers_2:_Dominators"
+                                target="_blank">Космиеские
                                 рейнджеры</a>. Текстуры некоторых персонажей и кораблей были взяты из интернета.
                         </p>
                         <p>
                             Часть вопросов по текстовым квестам была взята из открытых обучающих проектов <a
-                                href="https://www.efset.org/ru">EFSET</a>, <a
-                                href="https://www.cambridgeenglish.org">Cambridge Assessment English</a> и <a
-                                href="https://ru.hexlet.io/courses">Hexlet</a>. Рекомендую данные ресурсы для обучения
-                            английскому языку, а также различных направлений в IT.</p>
+                                href="https://www.efset.org/ru" target="_blank">EFSET</a>, <a
+                                href="https://www.cambridgeenglish.org" target="_blank">Cambridge Assessment English</a>
+                            и <a href="https://ru.hexlet.io/courses" target="_blank">Hexlet</a>. Рекомендую данные
+                            ресурсы для обучения английскому языку, а также различных направлений в IT.</p>
                     </div>
                 </div>
                 <div class="article">
@@ -121,9 +123,9 @@
                     <h2 class="article__caption">Благодарность</h2>
                     <div class="article__text">
                         <p>
-                            Хочу поблагодарить всю комманду <a href="https://beetroot.academy">Beetroot Accademy</a> за
-                            их прекрассную образовательную работу. Ваш проект это крутой шанс начать в IT для всех
-                            желающий.
+                            Хочу поблагодарить всю комманду <a href="https://beetroot.academy" target="_blank">Beetroot
+                                Accademy</a> за их прекрассную образовательную работу. Ваш проект это крутой шанс начать
+                            в IT для всех желающий.
                         </p>
                         <p>
                             Отдельно хочу поблагодарить Максима Бондарука, Женю Туз и Алену Левченко. Вы классные
